--- a/LLM_Assign3.ipynb
+++ b/LLM_Assign3.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "A100",
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyMLTQonY7blqxYjbJ74GzK3",
+      "authorship_tag": "ABX9TyPF6MhtS6uLXgeatM+WbvMK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2772,7 +2772,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "First and foremost we start by installing 'transformers' for this project."
+        "# Introduction"
+      ],
+      "metadata": {
+        "id": "IYPc1oZ3R_UP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The use of social media has increased exponentially in the recent times. On average, people spend over 2 hours on social media daily. The content in these platforms contain diverse texts, images, etc which are sometimes offensive. Therefore, it is important to build models that identify and filter offensive data online to create a safe online environment. These language models learn the next word into a sequence and understand grammar, context, and meaning. (Khan, 2023). Used for text classification in this context is DistilBERT which is a distilled version of BERT. As a purposed-built model derived from BERT (Kofi Akpatsa et al., 2022)."
       ],
       "metadata": {
         "id": "LhxJpiUdMda1"
@@ -3294,6 +3303,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "  The data must be readable for the model. In order to acheive good results the data must be cleaned such that it allows the model to access the necessary data that is to be evaluated."
+      ],
+      "metadata": {
+        "id": "UY0Xx0LeSK1l"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import re as llm_re #Import the regular expressions module to match and manipulate text patterns.\n",
@@ -3351,11 +3369,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The text is cleaned and processed. Regular expressions are used to search for text patterns and some of the common words which do not provide any significant meaning ('it', 'of', 'in', etc)are eliminated."
+        " Regular expressions are used to search for text patterns (which is nothing but a string of words) and some of the common words which do not provide any significant meaning ('it', 'of', 'in', etc)are eliminated. Punctuations are removed(. , !). Frequent stopwords are also filtered."
       ],
       "metadata": {
         "id": "z94vscTX-Ut9"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "COZZ554eTb4C"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -3368,6 +3395,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Display to check if the data is cleaned or not."
+      ],
+      "metadata": {
+        "id": "el73G3bqTgwW"
+      }
     },
     {
       "cell_type": "code",
@@ -3421,6 +3457,15 @@
       ],
       "metadata": {
         "id": "5vtSKhccAsKq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "If there is any missing values they should either be dropped or filled with relative data for the model to perform better."
+      ],
+      "metadata": {
+        "id": "nGI3cVgMTnrg"
       }
     },
     {
@@ -4507,6 +4552,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Evaluation"
+      ],
+      "metadata": {
+        "id": "BTYie_iJULDZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A comprehensive evaluation of a classification model is done by calculating several key performance metrics, displaying a confusion matrix, and plotting an ROC curve."
+      ],
+      "metadata": {
+        "id": "jCh87zTXUQ2o"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import numpy as llm_nyp #imported the numpy as llm_nyp for numerical operations.\n",
@@ -4696,6 +4759,20 @@
       ],
       "metadata": {
         "id": "ACLR-J7dgIn6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "  *Sumana Palle*\n",
+        "\n",
+        " *22009238*\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "amyLc0UlUrmY"
       }
     }
   ]
